-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0
-
None
On eglfs and linuxfb hotplugging of mice and keyboards are supported as long as libudev support is enabled. The mouse cursor will however not automatically appear and disappear when connecting or disconnecting a mouse during runtime. This should be corrected by connecting to the relevant signals from devicediscovery.
For Gerrit Dashboard: QTBUG-36374 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
76606,6 | eglfs: Mouse hotplugging support | dev | qt/qtbase | Status: MERGED | +2 | 0 |